--- a/indihome/indihome/index.html
+++ b/indihome/indihome/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 
 <head>
-    <!--
-    /   Multipurpose: Free Template by FreeHTML5.co
-    /   Author: https://freehtml5.co
-    /   Facebook: https://facebook.com/fh5co
-    /   Twitter: https://twitter.com/fh5co
+
     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -581,9 +577,9 @@
                             <div class="row">
                                 <div class="offset-lg-1 col-lg-10">
                                     <div class="test-img" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0"><img
-                                            src="assets/images/test1.png" alt="Testimonial 1"></div>
+                                            src="assets/images/" alt="Testimonial 1"></div>
                                     <h5 data-aos="fade-up" data-aos-delay="200" data-aos-duration="600"
-                                        data-aos-offset="0">John</h5>
+                                        data-aos-offset="0">Ahmad</h5>
                                     <span data-aos="fade-up" data-aos-delay="400" data-aos-duration="600"
                                         data-aos-offset="0">Karyawan</span>
                                     <p data-aos="fade-up" data-aos-delay="600" data-aos-duration="600"
@@ -602,9 +598,9 @@
                             <div class="row">
                                 <div class="offset-lg-1 col-lg-10">
                                     <div class="test-img" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0"><img
-                                            src="assets/images/test1.png" alt="Testimonial 1"></div>
+                                            src="assets/images/" alt="Testimonial 1"></div>
                                     <h5 data-aos="fade-up" data-aos-delay="200" data-aos-duration="600"
-                                        data-aos-offset="0">John</h5>
+                                        data-aos-offset="0">Ahmad</h5>
                                     <span data-aos="fade-up" data-aos-delay="400" data-aos-duration="600"
                                         data-aos-offset="0">Karyawan</span>
                                     <p data-aos="fade-up" data-aos-delay="600" data-aos-duration="600"
@@ -619,28 +615,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide text-center">
-                            <div class="row">
-                                <div class="offset-lg-1 col-lg-10">
-                                    <div class="test-img" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0"><img
-                                            src="assets/images/test1.png" alt="Testimonial 1"></div>
-                                    <h5 data-aos="fade-up" data-aos-delay="200" data-aos-duration="600"
-                                        data-aos-offset="0">John</h5>
-                                    <span data-aos="fade-up" data-aos-delay="400" data-aos-duration="600"
-                                        data-aos-offset="0">UI/UX
-                                        Designer</span>
-                                    <p data-aos="fade-up" data-aos-delay="600" data-aos-duration="600"
-                                        data-aos-offset="0">Ash's tactics &
-                                        books have helped me a lot in my understanding on how social
-                                        media
-                                        advertising works.I can say that he is one of the best development professionals
-                                        i have
-                                        dealt with so far. His experience is great & he is such a great & pleasant
-                                        person to
-                                        work with as he understands what you are</p>
-                                </div>
-                            </div>
-                        </div>
+                       
                     </div>
                     <div class="test-pagination"></div>
                 </div>
